data/derived/fa15/progs/unify/prog0291.ml.out
Characters 93-111:
  | l   -> List.map( f,sepConcat f l);;
                   ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
